# Notifier

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  exec.sh  main.cpp
resources/: icon.h  imgui.ini
